# travis-ci-project-work

./: .gitignore  .travis.yml  README.md
project/: .gitignore  CMakeLists.txt  Jenkinsfile  OldMakefile.mk  README.md  project.sln  project.vcxproj  project.vcxproj.filters  run_demo.sh
project/inc/: hello.hpp
project/javatester/: 01_build.sh  02_run.sh  OldMakefile.mk  pom.xml
project/javatester/src/main/java/: at_libtester_MyNativeClass.cpp
project/javatester/src/main/java/at/libtester/: MyNativeClass.java
project/src/: Main.cpp  hello.cpp
